[metadata]
name = test
version = attr: test.__version__
author = Mate Farkas
author_email = mate.farkas@sch.hu
description = My python package
long_description = file: README.md
url = https://github.com/farkasmate/python-test
platforms = all
license = WTFPL
classifiers = Programming Language :: Python :: 3

[options]
packages = find:
